Switched to float config values

--- a/data/fullregen.ini
+++ b/data/fullregen.ini
@@ -3,18 +3,16 @@
 ; Default values:
 ;
 ; - Health
-;   iMax = 70
-;   iRegenAmount = 1
-;   iRegenInitialDelay = 10
-;   iRegenRate = 0.03
+;   fMax = 70.0
+;   fRegenAmount = 1.0
+;   fRegenInitialDelay = 10.0
+;   fRegenRate = 0.03
 ;
 ; - Mana
-;   iMax = 100
-;   iRegenAmount = 1
-;   iRegenInitialDelay = 3
-;   iRegenStepTime = 0.1
-;
-; -1 = use default
+;   fMax = 100.0
+;   fRegenAmount = 1.0
+;   fRegenInitialDelay = 3.0
+;   fRegenStepTime = 0.1
 
 ; Version 1.0
 
@@ -22,13 +20,13 @@ bHealthRegen = true
 bManaRegen = true
 
 [Health]
-iMax = -1
-iRegenAmount = -1
-iRegenInitialDelay = -1
-iRegenRate = -1
+fMax = 70.0
+fRegenAmount = 1.0
+fRegenInitialDelay = 10.0
+fRegenRate = 0.03
 
 [Mana]
-iMax = -1
-iRegenAmount = -1
-iRegenInitialDelay = -1
-iRegenStepTime = -1
+fMax = 100.0
+fRegenAmount = 1.0
+fRegenInitialDelay = 3.0
+fRegenStepTime = 0.1
